# broll-scout

./: .env.example  .gitattributes  .gitignore  B-Roll Scout: Scaling from Internal Tool to SaaS  Makefile  README.md  STEERING.md  broll_agent.py  next.config.mjs  optimisation  package-lock.json  package.json  pyproject.toml  requirements-lambda.txt  requirements.txt  run.py  samconfig.toml  template.yaml
.cursor/rules/: backend-patterns.mdc  backlog.mdc  coding-conventions.mdc  frontend-patterns.mdc  project-context.mdc
app/: __init__.py  background.py  config.py  globals.css  layout.tsx  main.py  page.tsx  requirements.txt
app/api/: __init__.py  costs.py  data.py  jobs.py  settings.py
app/usage/: page.tsx
broll-companion/: app.url.example  companion.py  install.bat  launch-companion-server.bat  load-app-url.bat  requirements.txt  setup.bat  setup.command  setup.ps1  setup.sh  start-companion.bat  start-companion.command  start-companion.ps1  start-companion.sh  stop.bat  update.bat
components/: agent-status.tsx  job-history.tsx  navbar.tsx  progress-tracker.tsx  results-display.tsx  script-input.tsx
infra/: README.md
lib/: backend.ts  pipeline-defaults.ts  types.ts
public/: agent-poll-worker.js
scripts/: build_editor_package.sh  cleanup_dynamo.sh  create_tables.py  deploy.sh  deploy_aws.sh  dev.sh  package_companion.sh  populate_channels.py  populate_channels_local.py  put_app_secrets.sh  setup_ec2.sh  sync_min_video_duration_dynamo.py  test_e2e_flow.py
tests/: test_integration.py  test_v2_pipeline.py  test_whisper_pipeline.py  test_whisper_real.py
(+54 files in other folders)
